--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "test.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha spec"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "log4js": "^6.1.2",
+    "mocha":"^7.1.1",
     "nodemon": "^2.0.2",
     "request": "^2.88.0",
     "request-progress": "^3.0.0"
